# todo-app-rust

./: .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml  todo.db  todo.proto
backend/: .gitignore  Cargo.toml  README.md  build.rs  modd.conf
backend/src/: lib.rs  sqlite.rs  types.rs
backend/src/grpc/: mod.rs  todo.rs  todo_grpc.rs
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: README.md  go.mod  go.sum  modd.conf
frontend/cmd/: main.go
frontend/internal/app/: http.go  todo_test.go
frontend/pkg/proto/: todo.pb.go
frontend/scripts/: generate.sh
frontend/web/templates/: add.tmpl  header.tmpl  list.tmpl  navbar.tmpl
src/: main.rs  sqlite.rs
