[package]
name = "todo_app"
version = "0.1.0"
authors = ["Johan Håkansson <jhakanzon@gmail.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
rusqlite = { version = "0.18.0", features = ["bundled"] }
grpc            = "~0.6.1"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
clap = "~2.31.2"

[build-dependencies]
protoc-rust-grpc = "0.6.1"
